objects/TestClone__c.object
<CustomObject>
    <fields>
        <fullName>AutoID__c</fullName>
        <externalId>true</externalId>
        <label>AutoID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AutoRabitExtrnalID__c</fullName>
        <externalId>true</externalId>
        <label>AutoRabitExtrnalID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eadd__c</fullName>
        <label>eadd</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sname__c</fullName>
        <label>ename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>TestClone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TestClone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestClone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>